--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "web-vitals": "^2.1.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
-    "react-bootstrap": "^2.6.0"
+    "react-bootstrap": "^2.6.0",
+    "react-lazy-load-image-component": "^1.5.6"
   },
   "scripts": {
     "start": "react-scripts start",
